Nicole Fixed Max Width on Mobile CSS to make sure that we always had a nav bar of somekind.
Either Top Or Side.

--- a/ATA Packages/mobile.css
+++ b/ATA Packages/mobile.css
@@ -82,7 +82,7 @@
 
 }
 
-@media screen and (max-width: 600px) 
+@media screen and (max-width: 823px) 
 { 
   .nav li { 
     display:inline; 
